[package]
name = "chasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.30", optional = true }


[features]
default = ["code"]
code = ["crossterm", "ratatui"]