[package]
name = "chasm"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 1

[profile.dev]
debug = 2

[dependencies]
anyhow = "1.0.100"
arboard = { version = "3.6", optional = true }
clap = { version = "4.5.48", features = ["derive"] }
crossterm = { version = "0.29", optional = true }
dhat = { version = "0.3", optional = true }
ratatui = { version = "0.30", features = ["unstable-widget-ref"], optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"


[features]
default = ["code"]
code = ["crossterm", "ratatui", "arboard"]
dhat-heap = ["dhat"]